--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -18,26 +18,22 @@ padding: 0;
     height: 150px;
     border-top-left-radius: 50%;
     border-top-right-radius:50% ;
-    background-color: aqua;
     position: absolute;
     top: 0;
     left: 0;
     animation-name: waves;
     animation-duration: 3s;
     animation-iteration-count:infinite ;
+    padding-top: 70px;
+    text-align: center;
   
 } 
     
-.box p{
-    margin-top: 70px;
-}
+
 
 .box1{
     
     background-color: blueviolet;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
     left: 0px;  
     animation-delay: 0.2s;
 }
@@ -45,18 +41,12 @@ padding: 0;
 .box2{
     background-color: darkslategray;
     left: 150px;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
     animation-delay: 0.4s;
  
 }
 .box3{
     background-color: firebrick;
     left: 300px;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
     animation-delay: 0.6s;
   
 }
@@ -64,18 +54,12 @@ padding: 0;
 .box4{
     background-color: blue;
     left: 450px;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
     animation-delay: 0.8s;
   
 }
 .box5{
     background-color:gray;
     left: 600px;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
     animation-delay: 1s;
  
 }
